solve gap and change the main rose transition effect

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("./styles/normalize.css");
 
 :root {
   --bg-clr: #fefce1;
@@ -46,9 +47,9 @@ body {
 }
 
 .crescent-and-rose {
-  width: 400px;
+  width: 230px;
   top: 300px;
-  right: -100px;
+  right: -50px;
 }
 
 .logo-container {
@@ -85,7 +86,7 @@ body {
   align-items: center;
   justify-content: center;
   position:relative;
-  overflow:hidden;
+  /* overflow:hidden; */
 }
 
 .queen-name {
@@ -116,6 +117,7 @@ body {
   transform: translate(130px, -50px);
   -webkit-box-reflect: left -60%;
   z-index: -1;
+    transition: all .3s ease;
 }
 
 
@@ -466,9 +468,9 @@ body {
   }
 
   .crescent-and-rose {
-    width: 250px;
+    width: 150px;
     top: 360px;
-    right: -50px;
+    right: 0;
   }
 
   .heart {
@@ -500,9 +502,9 @@ body {
   }
 
   .crescent-and-rose {
-    width: 270px;
+    width: 150px;
     top: 350px;
-    right: -80px;
+    right: -40px;
   }
 
   .heart {
